@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.6-1
-Date: 2011-08-10
+Date: 2011-08-14
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
